--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,11 @@ plugins {
 	id 'org.springframework.boot' version '2.7.9'
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 }
+jar {
+	manifest {
+		attributes 'Main-Class': 'com.solponge.SolpongeApplication'
+	}
+}
 
 group = 'io.cloudtype'
 version = '0.0.1-SNAPSHOT'
@@ -19,7 +24,11 @@ configurations {
 		extendsFrom annotationProcessor
 	}
 }
-
+bootWar {
+	archiveBaseName = 'Demo-0.0.1-SNAPSHOT'
+	archiveFileName = 'Demo-0.0.1-SNAPSHOT.war'
+	archiveVersion = '0.0.1'
+}
 
 dependencies {
 	developmentOnly("org.springframework.boot:spring-boot-devtools")
@@ -46,6 +55,8 @@ dependencies {
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.3.0'
 	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.28'
 	implementation 'org.postgresql:postgresql:42.5.1'
+
+	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client:2.7.4'
 
 
 	testCompileOnly 'org.projectlombok:lombok'
