--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,10 @@ server.port = 8088
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://13.209.12.47:52247/solponge
-spring.datasource.username=hr
-spring.datasource.password=hr
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://13.125.114.237:50634/solponge
+#spring.datasource.username=hr
+#spring.datasource.password=hr
 #spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
 #spring.datasource.username=${DB_USERNAME}
 #spring.datasource.password=${DB_PASSWORD}
@@ -22,3 +22,8 @@ spring.devtools.livereload.enabled=true
 spring.web.resources.static-locations=file:src/main/resources/static/
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=file:src/main/resources/templates/
+
+spring.datasource.hikari.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://${DB_url}:${DB_port}/${DB_dataBaseName}
+spring.datasource.username=${DB_name}
+spring.datasource.password=${DB_password}
