배포를 위한 마리아 DB 연결 test5

--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,11 @@ configurations {
 		extendsFrom annotationProcessor
 	}
 }
+apply plugin: 'war'
+
+bootWar {
+	archiveFileName = 'ROOT.war'
+}
 
 dependencies {
 	developmentOnly("org.springframework.boot:spring-boot-devtools")
