--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,14 +23,14 @@ spring.web.resources.static-locations=file:src/main/resources/static/
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=file:src/main/resources/templates/
 
-spring.datasource.hikari.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://${DB_url}:${DB_port}/${DB_dataBaseName}
-spring.datasource.username=${DB_name}
-spring.datasource.password=${DB_password}
 #spring.datasource.hikari.driver-class-name=org.mariadb.jdbc.Driver
-#spring.datasource.url=jdbc:mariadb://svc.sel3.cloudtype.app:31944/solponge
-#spring.datasource.username=root
-#spring.datasource.password=6774
+#spring.datasource.url=jdbc:mariadb://${DB_url}:${DB_port}/${DB_dataBaseName}
+#spring.datasource.username=${DB_name}
+#spring.datasource.password=${DB_password}
+spring.datasource.hikari.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://svc.sel3.cloudtype.app:31944/solponge
+spring.datasource.username=root
+spring.datasource.password=6774
 
 
 
